--- a/Tutorials/index.html
+++ b/Tutorials/index.html
@@ -3,6 +3,7 @@
 The following PATRIC command line tutorials are available:
 
 <ul>
+<li><a href="downloading.html">Downloading the release</a>
 <li><a href="cli_intro.html">Command Line Introduction</a>
 <li><a href="signature_clusters.html">Computing Signature Clusters</a>
 <li><a href="logging_in.html">Logging in to PATRIC at the Command Line</a>
